Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4870

LFSCK3: Race between layout LFSCK and metadata migration

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.6.0
    • 3
    • 13463

      According to current metadata migration implementation, before the old MDT-object is removed, both the new MDT-object and old MDT-object will reference the same LOV layout. Then if the layout LFSCK finds the new MDT-object by race, it will regard related OST-object(s) as multiple referenced case, and will try to create new OST-object(s) for the new MDT-object.

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: